[gd_scene load_steps=13 format=2]

[ext_resource path="res://Recursos/Im√°genes/4-Dialogo.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Instancia3.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Jugador.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/Tiles/Tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Escenas/Jefe1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Escenas/Atras.tscn" type="PackedScene" id=6]
[ext_resource path="res://Escenas/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Escenas/TeclasInf.tscn" type="PackedScene" id=8]
[ext_resource path="res://Escenas/Escudo.tscn" type="PackedScene" id=9]
[ext_resource path="res://Escenas/Cronometro.tscn" type="PackedScene" id=10]
[ext_resource path="res://Escenas/llllll.gd" type="Script" id=11]
[ext_resource path="res://FuenteSalir.tres" type="DynamicFont" id=12]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_left = -50.0
margin_right = -10.0

[node name="Atras" parent="CanvasLayer/UI" instance=ExtResource( 6 )]
margin_left = 50.0
margin_top = -1.0
margin_right = 189.0

[node name="llllll" type="Label" parent="CanvasLayer/UI"]
margin_left = 1674.0
margin_top = 29.0
margin_right = 1734.0
margin_bottom = 46.0
rect_scale = Vector2( 2.5, 2.5 )
text = "Perfil"
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel" type="Label" parent="CanvasLayer/UI"]
margin_left = 991.0
margin_top = 13.0
margin_right = 1024.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 12 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 877.895, 454.084 )
scale = Vector2( 1.31657, 1.20146 )
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.505882, 0.556863, 0.490196, 1 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65537, 14, 0, -131072, 14, 0, -131071, 14, 0, -131070, 14, 0, -131069, 14, 0, -131068, 14, 0, -131067, 14, 0, -131066, 14, 0, -131065, 14, 0, -131064, 14, 0, -131063, 14, 0, -131062, 14, 0, -131061, 14, 0, -131060, 14, 0, -131059, 14, 0, -131058, 14, 0, -1, 14, 0, -65536, 14, 0, -65535, 14, 0, -65534, 14, 0, -65533, 14, 0, -65532, 14, 0, -65531, 14, 0, -65530, 14, 0, -65529, 14, 0, -65528, 14, 0, -65527, 14, 0, -65526, 14, 0, -65525, 14, 0, -65524, 14, 0, -65523, 14, 0, -65522, 14, 0, 65535, 14, 0, 0, 14, 0, 1, 1, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 3, 0, 13, 14, 0, 14, 14, 0, 131071, 14, 0, 65536, 14, 0, 65537, 10, 0, 65538, 12, 0, 65539, 12, 0, 65540, 12, 0, 65541, 12, 0, 65542, 12, 0, 65543, 12, 0, 65544, 12, 0, 65545, 12, 0, 65546, 12, 0, 65547, 12, 0, 65548, 13, 0, 65549, 14, 0, 65550, 14, 0, 196607, 14, 0, 131072, 14, 0, 131073, 10, 0, 131074, 12, 0, 131075, 12, 0, 131076, 12, 0, 131077, 12, 0, 131078, 12, 0, 131079, 12, 0, 131080, 12, 0, 131081, 12, 0, 131082, 12, 0, 131083, 12, 0, 131084, 13, 0, 131085, 14, 0, 131086, 14, 0, 262143, 14, 0, 196608, 14, 0, 196609, 5, 0, 196610, 11, 0, 196611, 11, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196616, 11, 0, 196617, 11, 0, 196618, 11, 0, 196619, 11, 0, 196620, 13, 0, 196621, 14, 0, 196622, 14, 0, 327679, 14, 0, 262144, 14, 0, 262145, 10, 0, 262146, 12, 0, 262147, 12, 0, 262148, 12, 0, 262149, 12, 0, 262150, 12, 0, 262151, 12, 0, 262152, 12, 0, 262153, 12, 0, 262154, 12, 0, 262155, 12, 0, 262156, 13, 0, 262157, 14, 0, 262158, 14, 0, 393215, 14, 0, 327680, 14, 0, 327681, 10, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 327689, 12, 0, 327690, 12, 0, 327691, 12, 0, 327692, 13, 0, 327693, 14, 0, 327694, 14, 0, 458751, 14, 0, 393216, 14, 0, 393217, 0, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 2, 0, 393229, 14, 0, 393230, 14, 0, 524287, 14, 0, 458752, 14, 0, 458753, 14, 0, 458754, 14, 0, 458755, 14, 0, 458756, 14, 0, 458757, 14, 0, 458758, 14, 0, 458759, 14, 0, 458760, 14, 0, 458761, 14, 0, 458762, 14, 0, 458763, 14, 0, 458764, 14, 0, 458765, 14, 0, 458766, 14, 0, 589823, 14, 0, 524288, 14, 0, 524289, 14, 0, 524290, 14, 0, 524291, 14, 0, 524292, 14, 0, 524293, 14, 0, 524294, 14, 0, 524295, 14, 0, 524296, 14, 0, 524297, 14, 0, 524298, 14, 0, 524299, 14, 0, 524300, 14, 0, 524301, 14, 0, 524302, 14, 0 )

[node name="Jugador" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.505882, 0.556863, 0.490196, 1 )
position = Vector2( 202.945, 415.774 )
scale = Vector2( 3, 3 )

[node name="Enemigo1" parent="." instance=ExtResource( 5 )]

[node name="TeclasInf" parent="." instance=ExtResource( 8 )]

[node name="Escudo" parent="." instance=ExtResource( 9 )]
position = Vector2( -431.195, 117.599 )

[node name="Cronometro" parent="." instance=ExtResource( 10 )]
position = Vector2( 832.022, 95.8738 )
scale = Vector2( 3, 3 )

[connection signal="pressed" from="CanvasLayer/UI/Atras" to="." method="_on_Atras_pressed"]
[connection signal="protect" from="Jugador" to="." method="_on_Jugador_protect"]
[connection signal="protect" from="Jugador" to="Escudo" method="_on_Jugador_protect"]
[connection signal="shoot" from="Jugador" to="." method="_on_Jugador_shoot"]
[connection signal="boss_die" from="Enemigo1" to="Cronometro" method="_on_Enemigo1_boss_die"]
